--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=job_tracker
 spring.config.import=optional:file:.env[.properties]
 # Database connection configuration
-spring.datasource.url=jdbc:postgresql://db.ceyvtpflawdktiyyjdxf.supabase.co:5432/postgres?user=postgres&password=${PSQLDB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://db.vrjcdyvwmzwoqjzjznjx.supabase.co:5432/postgres?user=postgres&password=${PSQLDB_PASSWORD}
 spring.jpa.properties.hibernate.format_sql=true
 
 
@@ -9,5 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+server.port=8081
 
 jwt_secret=${JWT_SECRET}
